# stackcrawler

./: README.md  main.py  pyproject.toml
stackcrawler/: Entry.py  EntryFilter.py  HackerNewsEntry.py  HackerNewsParser.py  Parser.py  StackCrawler.py
tests/: news_ycombinator_sample.html  test_EntryFilter.py  test_HackerNewsParser.py  test_StackCrawler.py
