[tool.poetry]
name = "stackcrawler"
version = "0.1.0"
description = "Just a simple web crawler"
authors = ["Miguel Alejandro Martín <miguel.martinr11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
